--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "nodemon": "nodemon server.js",
     "start": "node server.js",
     "seed": "node seeds/seed.js"
   },
@@ -21,5 +22,8 @@
     "express-session": "^1.17.3",
     "mysql2": "^3.0.0-rc.1",
     "sequelize": "^6.25.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
