--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.2",
     "connect-session-sequelize": "^7.1.5",
+    "console.table": "^0.10.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
